tests/snapshots/arrange__arranges_a_c4_container_diagram_without_issues_or_dents.snap
---
source: tests/arrange.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 27,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 17.67,
  "remainingIssues": 0
}
