tests/snapshots/arrange__arranges_a_tall_loan_dfd_without_steps_at_the_ends.snap
---
source: tests/arrange.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 28,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0
}
