tests/snapshots/arrange__arranges_the_order_checkout_dfd_so_the_pick_list_turns_less.snap
---
source: tests/arrange.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 18,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 38.91,
  "remainingIssues": 0
}
